@@ -92,6 +92,7 @@
 			android:theme="@style/NoTitleBar"></activity>
 		<activity android:name="com.keepassdroid.GeneratePasswordActivity" 
 			android:theme="@style/NoTitleBar"></activity>
+		<service android:name="com.keepassdroid.services.TimeoutService"></service>
 		<meta-data android:name="com.a0soft.gphone.aTrackDog.webURL" android:value="http://keepassdroid.com" />
 	</application>
 </manifest> 
