@@ -1,3 +1,6 @@
+ * Restore the timeout service, we need it to keep the app in memory long
+   enough to clear the clipboard and to remove the notifications.
+
 KeePassDroid (1.9.18.2)
  * Updated Dutch translations from Erik Jan Meijer
  * Updated Russian translations from I Nedoboy
